--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1>David Wilson</h1>
+      <h2>Trying to figure this out</h2>
       <nav>
         <ul>
           <li>About Me</li>
